--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,14 @@
 /build
 
 # misc
+_build
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.eslintcache
+jsconfig.json
 
 npm-debug.log*
 yarn-debug.log*
