--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "antd": "^4.12.2",
+    "firebase": "^8.2.9",
     "firebase-tools": "^9.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
