--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^8.2.9",
     "firebase-tools": "^9.2.2",
     "history": "^5.0.0",
+    "nanoid": "^3.1.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
